Fix spacing

--- a/style.sass
+++ b/style.sass
@@ -14,6 +14,7 @@ body
   margin: auto 20rem 
   h2
     font-size: 2.5rem
+    margin-left: 1rem
   .container
     margin: 0.1rem auto
     display: flex
@@ -98,7 +99,7 @@ figcaption
   text-align: center
   font-size: 0.9rem
   line-height: 1rem
-  margin: 2rem auto
+  margin: 0 auto 1.7rem auto
 .right 
   float: right
   height: 22rem
@@ -193,9 +194,9 @@ li
     .jumbotron
       width: 100%
       #mesmer
-        font-size: 3rem
+        font-size: 2.5rem
       #msb
-        font-size: 1.5rem 
+        font-size: 1.2rem 
     footer
       font-size: 0.2rem
       letter-spacing: normal
